--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="done">DONE</string>
     <string name="photo">photo</string>
+
+
+    <string name="lb">lb</string>
+    <string name="kg">kg</string>
 </resources>
