--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="done">DONE</string>
-    <string name="photo">photo</string>
+    <string name="photo">Update photo</string>
 
 
     <string name="lb">lb</string>
