--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="done">DONE</string>
-    <string name="photo">Update photo</string>
+    <string name="photo">Choose photo</string>
+    <string name="select_date_of_birth">Select date of birth</string>
+    <string name="select_photo">Select photo</string>
+    <string name="warn_photo">Please choose photo first!</string>
+    <string name="warn_age">Please enter valid age!</string>
 
 
     <string name="lb">lb</string>
